Further updates to how the Virtual Dom works Supports newable Components that do not create custom tags.

--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "typescript": "^3.6.3"
   },
   "build": {
-    "productName": "{your name}",
-    "appId": "{application.id}",
+    "productName": "vectron",
+    "appId": "com.evileric.vectron",
     "win": {
       "target": [
         "nsis",
